; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/aarch64/extr_swscale_unscaled.c_get_unscaled_swscale_neon.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/aarch64/extr_swscale_unscaled.c_get_unscaled_swscale_neon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SWS_ACCURATE_RND = common dso_local global i32 0, align 4
@nv12 = common dso_local global i32 0, align 4
@NV12 = common dso_local global i32 0, align 4
@nv21 = common dso_local global i32 0, align 4
@NV21 = common dso_local global i32 0, align 4
@yuv420p = common dso_local global i32 0, align 4
@YUV420P = common dso_local global i32 0, align 4
@yuv422p = common dso_local global i32 0, align 4
@YUV422P = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @get_unscaled_swscale_neon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_unscaled_swscale_neon(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @SWS_ACCURATE_RND, align 4
  %8 = and i32 %6, %7
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @nv12, align 4
  %10 = load i32, i32* @NV12, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @SET_FF_NVX_TO_ALL_RGBX_FUNC(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* @nv21, align 4
  %14 = load i32, i32* @NV21, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @SET_FF_NVX_TO_ALL_RGBX_FUNC(i32 %13, i32 %14, i32 %15)
  %17 = load i32, i32* @yuv420p, align 4
  %18 = load i32, i32* @YUV420P, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @SET_FF_NVX_TO_ALL_RGBX_FUNC(i32 %17, i32 %18, i32 %19)
  %21 = load i32, i32* @yuv422p, align 4
  %22 = load i32, i32* @YUV422P, align 4
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @SET_FF_NVX_TO_ALL_RGBX_FUNC(i32 %21, i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @SET_FF_NVX_TO_ALL_RGBX_FUNC(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
